--- a/Travel_recommendation_system.ipynb
+++ b/Travel_recommendation_system.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMjCM7bdqGoUjMvwm0s+1OL",
+      "authorship_tag": "ABX9TyNO+PFqSUpOx8U1WgqOvN3E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -229,7 +229,7 @@
         "    recommendations = label_encoders['Name'].inverse_transform(filtered_data['Name'].unique())\n",
         "\n",
         "    return recommendations if len(recommendations) > 0 else \"No recommendations found.\"\n",
-        "\n",
+        "import gradio as gr\n",
         "demo = gr.Interface(\n",
         "    fn=recommend_places,\n",
         "    inputs=[\n",
@@ -253,133 +253,8 @@
       "metadata": {
         "id": "YL5QY-HDXNa9"
       },
-      "execution_count": 53,
+      "execution_count": 56,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install huggingface_hub"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "yFO3B7fFt6lV",
-        "outputId": "8a9aeed2-9387-4120-e791-073d1c23144e"
-      },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: huggingface_hub in /usr/local/lib/python3.11/dist-packages (0.33.2)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.11/dist-packages (from huggingface_hub) (3.18.0)\n",
-            "Requirement already satisfied: fsspec>=2023.5.0 in /usr/local/lib/python3.11/dist-packages (from huggingface_hub) (2025.3.2)\n",
-            "Requirement already satisfied: packaging>=20.9 in /usr/local/lib/python3.11/dist-packages (from huggingface_hub) (24.2)\n",
-            "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.11/dist-packages (from huggingface_hub) (6.0.2)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.11/dist-packages (from huggingface_hub) (2.32.3)\n",
-            "Requirement already satisfied: tqdm>=4.42.1 in /usr/local/lib/python3.11/dist-packages (from huggingface_hub) (4.67.1)\n",
-            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.11/dist-packages (from huggingface_hub) (4.14.1)\n",
-            "Requirement already satisfied: hf-xet<2.0.0,>=1.1.2 in /usr/local/lib/python3.11/dist-packages (from huggingface_hub) (1.1.5)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests->huggingface_hub) (3.4.2)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests->huggingface_hub) (3.10)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests->huggingface_hub) (2.4.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests->huggingface_hub) (2025.6.15)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!huggingface-cli login"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "jDbIhb0WuD7T",
-        "outputId": "c2b2dac7-1446-4ca9-f019-b9f4b4d63d1c"
-      },
-      "execution_count": 54,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "    _|    _|  _|    _|    _|_|_|    _|_|_|  _|_|_|  _|      _|    _|_|_|      _|_|_|_|    _|_|      _|_|_|  _|_|_|_|\n",
-            "    _|    _|  _|    _|  _|        _|          _|    _|_|    _|  _|            _|        _|    _|  _|        _|\n",
-            "    _|_|_|_|  _|    _|  _|  _|_|  _|  _|_|    _|    _|  _|  _|  _|  _|_|      _|_|_|    _|_|_|_|  _|        _|_|_|\n",
-            "    _|    _|  _|    _|  _|    _|  _|    _|    _|    _|    _|_|  _|    _|      _|        _|    _|  _|        _|\n",
-            "    _|    _|    _|_|      _|_|_|    _|_|_|  _|_|_|  _|      _|    _|_|_|      _|        _|    _|    _|_|_|  _|_|_|_|\n",
-            "\n",
-            "    A token is already saved on your machine. Run `huggingface-cli whoami` to get more information or `huggingface-cli logout` if you want to log out.\n",
-            "    Setting a new token will erase the existing one.\n",
-            "    To log in, `huggingface_hub` requires a token generated from https://huggingface.co/settings/tokens .\n",
-            "Enter your token (input will not be visible): \n",
-            "Add token as git credential? (Y/n) y\n",
-            "Token is valid (permission: fineGrained).\n",
-            "The token `travel recommendation` has been saved to /root/.cache/huggingface/stored_tokens\n",
-            "\u001b[1m\u001b[31mCannot authenticate through git-credential as no helper is defined on your machine.\n",
-            "You might have to re-authenticate when pushing to the Hugging Face Hub.\n",
-            "Run the following command in your terminal in case you want to set the 'store' credential helper as default.\n",
-            "\n",
-            "git config --global credential.helper store\n",
-            "\n",
-            "Read https://git-scm.com/book/en/v2/Git-Tools-Credential-Storage for more details.\u001b[0m\n",
-            "Token has not been saved to git credential helper.\n",
-            "Your token has been saved to /root/.cache/huggingface/token\n",
-            "Login successful.\n",
-            "The current active token is: `travel recommendation`\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!gradio deploy"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "k2PvR9uAz8Nc",
-        "outputId": "81b0daa3-355a-4179-889c-df5036e8aae3"
-      },
-      "execution_count": 55,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Need \u001b[32m'write'\u001b[0m access token to create a Spaces repo.\n",
-            "\n",
-            "    _|    _|  _|    _|    _|_|_|    _|_|_|  _|_|_|  _|      _|    _|_|_|      _|_|_|_|    _|_|      _|_|_|  _|_|_|_|\n",
-            "    _|    _|  _|    _|  _|        _|          _|    _|_|    _|  _|            _|        _|    _|  _|        _|\n",
-            "    _|_|_|_|  _|    _|  _|  _|_|  _|  _|_|    _|    _|  _|  _|  _|  _|_|      _|_|_|    _|_|_|_|  _|        _|_|_|\n",
-            "    _|    _|  _|    _|  _|    _|  _|    _|    _|    _|    _|_|  _|    _|      _|        _|    _|  _|        _|\n",
-            "    _|    _|    _|_|      _|_|_|    _|_|_|  _|_|_|  _|      _|    _|_|_|      _|        _|    _|    _|_|_|  _|_|_|_|\n",
-            "\n",
-            "Enter your token (input will not be visible): \n",
-            "Add token as git credential? (Y/n) y\n",
-            "\u001b[1m\u001b[31mCannot authenticate through git-credential as no helper is defined on your machine.\n",
-            "You might have to re-authenticate when pushing to the Hugging Face Hub.\n",
-            "Run the following command in your terminal in case you want to set the 'store' credential helper as default.\n",
-            "\n",
-            "git config --global credential.helper store\n",
-            "\n",
-            "Read https://git-scm.com/book/en/v2/Git-Tools-Credential-Storage for more details.\u001b[0m\n",
-            "Token has not been saved to git credential helper.\n",
-            "model.pkl: 100% 6.20M/6.20M [00:00<00:00, 8.29MB/s]\n",
-            "Space available at \n",
-            "\u001b[4;94mhttps://huggingface.co/spaces/ObilisettyVyshnavi/Travel_REcommendation_System\u001b[0m\n"
-          ]
-        }
-      ]
     }
   ]
 }
